<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin_10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/changepassword"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/oldpassword"
        android:padding="@dimen/margin_8"
        android:textColor="@color/black"
        android:textSize="@dimen/margin_13"
        android:layout_margin="@dimen/margin_10" />

    <EditText
        android:id="@+id/change_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/newpassword"
        android:padding="@dimen/margin_8"
        android:textColor="@color/black"
        android:textSize="@dimen/margin_13"
        android:layout_margin="@dimen/margin_10" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="0.4"
            android:background="@drawable/rounded_login_btn"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"></View>

        <Button
            android:id="@+id/dialog_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="0.4"
            android:background="@drawable/rounded_login_btn"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>